--- a/src/app/components/register-form/register-form.scss
+++ b/src/app/components/register-form/register-form.scss
@@ -1,7 +1,7 @@
-.example-container mat-form-field + mat-form-field {
-  margin-left: 8px;
-}
-
-.example-card {
-  max-width: 400px;
+.form-container {
+  display: flex;
+  flex-direction: column;
+  border: 1px black solid;
+  border-radius: 16px;
+  padding: 1rem;
 }
