--- a/src/app/components/register-form/register-form.html
+++ b/src/app/components/register-form/register-form.html
@@ -1,129 +1,175 @@
-<section class="form-container">
-
-  <!-- Full Name -->
-
- <mat-form-field appearance="fill">
-    <mat-label>Full Name</mat-label>
-    <input matInput placeholder="Full Name">    
-  </mat-form-field>
-
-  <!-- E-mail -->
-  <mat-form-field>
-    <mat-label>Enter your email</mat-label>
-    <input
-      matInput
-      placeholder="pat@example.com"
-      [formControl]="email"
-      (blur)="updateErrorMessage()"
-      required
-    />
-    @if (email.invalid) {
-    <mat-error>{{ errorMessage() }}</mat-error>
-    }
-  </mat-form-field>
-
-  <!-- Datepicker -->
-  <mat-form-field class="example-full-width">
-    <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="picker" />
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker touchUi #picker></mat-datepicker>
-  </mat-form-field>
-
-  <!-- Telephone -->
-   <div style="display: flex;">
-    <mat-form-field style="flex: 1; margin-right: 8px;">
-      <mat-label>Area Code</mat-label>
-      <input matInput placeholder="+54" />
-      <mat-hint>(xxxx)</mat-hint>
+<section>
+  <form
+    class="form-container"
+    action=""
+    [formGroup]="form"
+    autocomplete="off"
+    (ngSubmit)="onSubmit()"
+  >
+    <!-- Full Name -->
+    <mat-form-field appearance="fill">
+      <mat-label>Full Name</mat-label>
+      <input matInput type="text" placeholder="Full Name" formControlName="fullName" />
+      @if (form.get('fullName')?.hasError('required') && (form.get('fullName')?.touched ||
+      form.get('fullName')?.dirty)) {
+      <mat-error> Full name is required </mat-error>
+      }
+      @if( form.get('fullName')?.hasError('minlength') && (form.get('fullName')?.touched ||
+      form.get('fullName')?.dirty)) {
+      <mat-error> At least 3 characters </mat-error>
+      }
     </mat-form-field>
 
-    <mat-form-field style="flex: 3;">
-      <mat-label>Phone Number</mat-label>
-      <input matInput placeholder="123456789" />
-      <mat-hint>xxxx-xxxx</mat-hint>
+    <!-- E-mail -->
+    <mat-form-field>
+      <mat-label>Enter your email</mat-label>
+      <input
+        matInput
+        placeholder="pat@example.com"
+        formControlName="email"
+        (blur)="updateErrorMessage()"
+        required
+      />
+      @if(form.get('email')?.invalid && (form.get('email')?.touched || form.get('email')?.dirty)){
+      <mat-error>
+        {{ errorMessage() }}
+      </mat-error>
+      }
     </mat-form-field>
 
-   </div>
+    <!-- Datepicker -->
+    <mat-form-field class="example-full-width">
+      <mat-label>Choose a date</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="date" />
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker touchUi #picker></mat-datepicker>
+      @if(form.get('date')?.invalid && (form.get('date')?.touched || form.get('date')?.dirty)) {
+      <mat-error> Date is required </mat-error>
+      }
+    </mat-form-field>
+
+    <!-- Telephone -->
+    <div style="display: flex">
+      <mat-form-field style="flex: 1; margin-right: 8px">
+        <mat-label>Area Code</mat-label>
+        <input
+          type="tel"
+          matInput
+          placeholder="+11"
+          formControlName="areaCode"
+          maxlength="4"
+          minlength="2"
+        />
+
+        @if(form.get('areaCode')?.invalid && (form.get('areaCode')?.touched ||
+        form.get('areaCode')?.dirty)){
+        <mat-error> Enter a valid area code </mat-error>
+        }
+      </mat-form-field>
+
+      <mat-form-field style="flex: 3">
+        <mat-label>Phone Number</mat-label>
+        <input
+          matInput
+          type="tel"
+          placeholder="1234-5678"
+          formControlName="phone"
+          minlength="6"
+          maxlength="8"
+        />
+
+        @if(form.get('phone')?.invalid && (form.get('phone')?.touched || form.get('phone')?.dirty)){
+        <mat-error> Enter a valid phone number </mat-error>
+        }
+      </mat-form-field>
+    </div>
 
     <!-- Country Selector -->
-  <mat-form-field>
-    <mat-label>Select a country</mat-label>
-    <mat-select [(value)]="countrySelected">
-      <mat-option style="display: flex" value="Argentina">
+    <mat-form-field>
+      <mat-label>Select a country</mat-label>
+      <mat-select formControlName="country">
+        <mat-option style="display: flex" value="Argentina">
           <img
             style="width: 20px; height: 15px; margin-left: auto"
             src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Flag_of_Argentina.svg"
             alt="Argentina Flag"
           />
-        <span> Argentina</span>
-      </mat-option>
-      <mat-option value="Chile">
-            <img
-                style="width: 20px; height: 15px; margin-left: auto"
-                src="https://upload.wikimedia.org/wikipedia/commons/7/78/Flag_of_Chile.svg"
-                alt="Chile Flag"
-            />
-            <span> Chile</span>
-      </mat-option>
-      <mat-option value="Bolivia">
-            <img
-                style="width: 20px; height: 15px; margin-left: auto"
-                src="https://upload.wikimedia.org/wikipedia/commons/4/48/Flag_of_Bolivia.svg"
-                alt="Bolivia Flag"
-            />
-            <span> Bolivia</span>
-      </mat-option>
-      <mat-option value="Colombia">
-            <img
-                style="width: 20px; height: 15px; margin-left: auto"
-                src="https://upload.wikimedia.org/wikipedia/commons/2/21/Flag_of_Colombia.svg"
-                alt="Colombia Flag"
-            />
-            <span> Colombia</span>
-      </mat-option>
+          <span> Argentina</span>
+        </mat-option>
+        <mat-option value="Chile">
+          <img
+            style="width: 20px; height: 15px; margin-left: auto"
+            src="https://upload.wikimedia.org/wikipedia/commons/7/78/Flag_of_Chile.svg"
+            alt="Chile Flag"
+          />
+          <span> Chile</span>
+        </mat-option>
+        <mat-option value="Bolivia">
+          <img
+            style="width: 20px; height: 15px; margin-left: auto"
+            src="https://upload.wikimedia.org/wikipedia/commons/4/48/Flag_of_Bolivia.svg"
+            alt="Bolivia Flag"
+          />
+          <span> Bolivia</span>
+        </mat-option>
+        <mat-option value="Colombia">
+          <img
+            style="width: 20px; height: 15px; margin-left: auto"
+            src="https://upload.wikimedia.org/wikipedia/commons/2/21/Flag_of_Colombia.svg"
+            alt="Colombia Flag"
+          />
+          <span> Colombia</span>
+        </mat-option>
+        <mat-option value="Brasil">
+          <img
+            style="width: 20px; height: 15px; margin-left: auto"
+            src="https://upload.wikimedia.org/wikipedia/en/0/05/Flag_of_Brazil.svg"
+            alt="Brasil Flag"
+          />
+          <span> Brasil</span>
+        </mat-option>
+      </mat-select>
+      @if(form.get('country')?.invalid && (form.get('country')?.touched || form.get('country')?.dirty)){
+      <mat-error> Country is required </mat-error>
+      }
+    </mat-form-field>
 
-      <mat-option value="Brasil">
-            <img
-                style="width: 20px; height: 15px; margin-left: auto"
-                src="https://upload.wikimedia.org/wikipedia/en/0/05/Flag_of_Brazil.svg"
-                alt="Brasil Flag"
-            />
-            <span> Brasil</span>
-
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-
-  <!-- Password -->
-
+    <!-- Password -->
     <mat-form-field>
       <mat-label>Enter your password</mat-label>
-      <input matInput [type]="hide() ? 'password' : 'text'" />
+      <input autocomplete="new-password" matInput [type]="hide() ? 'password' : 'text'" formControlName="password" />
       <button
         matIconButton
         matSuffix
-        (click)="clickEvent($event)"
+        (click)="toggleHidePassword($event)"
         [attr.aria-label]="'Hide password'"
         [attr.aria-pressed]="hide()"
       >
         <mat-icon>{{ hide() ? 'visibility_off' : 'visibility' }}</mat-icon>
       </button>
+      @if(form.get('password')?.invalid && (form.get('password')?.touched || form.get('password')?.dirty)){
+      <mat-error> Password is required (min 6 chars) </mat-error>
+      }
+      
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Repeat your password</mat-label>
-      <input matInput [type]="hide() ? 'password' : 'text'" />
+      <input autocomplete="new-password"  matInput [type]="hide() ? 'password' : 'text'" formControlName="confirmPassword" />
       <button
         matIconButton
         matSuffix
-        (click)="clickEvent($event)"
+        (click)="toggleHidePassword($event)"
         [attr.aria-label]="'Hide password'"
-        [attr.aria-pressed]="hide()"
+        [attr.aria-pressed]="hide()"        
       >
         <mat-icon>{{ hide() ? 'visibility_off' : 'visibility' }}</mat-icon>
       </button>
+          @if(form.hasError('passwordMismatch') ){
+      <mat-error> Passwords do not match </mat-error>
+      }
+
     </mat-form-field>
-
-
-  </section>
+    <button matButton="filled" type="submit">Register</button>
+  </form>
+</section>
