--- a/src/app/components/register-form/register-form.html
+++ b/src/app/components/register-form/register-form.html
@@ -40,11 +40,14 @@
     <!-- Datepicker -->
     <mat-form-field class="example-full-width">
       <mat-label>Choose a date</mat-label>
-      <input matInput [matDatepicker]="picker" formControlName="date" />
+      <input matInput [matDatepicker]="picker" readonly formControlName="date" />
       <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker touchUi #picker></mat-datepicker>
-      @if(form.get('date')?.invalid && (form.get('date')?.touched || form.get('date')?.dirty)) {
+      @if(form.get('date')?.hasError('required') && (form.get('date')?.touched || form.get('date')?.dirty)) {
       <mat-error> Date is required </mat-error>
+      }
+      @if(form.get('date')?.hasError('underAge') ){
+      <mat-error> You must be at least 18 years old </mat-error>
       }
     </mat-form-field>
 
