--- a/src/app/components/register-form/register-form.scss
+++ b/src/app/components/register-form/register-form.scss
@@ -1,7 +1,20 @@
 .form-container {
   display: flex;
   flex-direction: column;
+}
+
+.section-container {
   border: 1px black solid;
   border-radius: 16px;
-  padding: 1rem;
+  padding: 0.5rem 2rem 1rem 2rem;
+  margin-top: 1rem;
+}
+
+@media (max-width: 480px) {
+  .section-container { 
+    padding: 0.5rem;
+    margin: auto;
+    max-width: 75%; 
+    }
+
 }
