--- a/src/app/components/register-form/register-form.html
+++ b/src/app/components/register-form/register-form.html
@@ -193,6 +193,6 @@
       <mat-error> Passwords do not match </mat-error>
       }
     </mat-form-field>
-    <button matButton="filled" type="submit">Register</button>
+    <button matButton="filled" type="submit" [disabled]="form.invalid" >Register</button>
   </form>
 </section>
